--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sora:wght@100..800&family=Unbounded:wght@200..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Sora:wght@100..800&family=Unbounded:wght@200..900&display=swap"
     rel="stylesheet">
 
-  <!-- Clash Display Fonts -->
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,300&display=swap" rel="stylesheet">
+  <!-- Clash Display & General Sans Fonts -->
+  <link
+    href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,300&f[]=general-sans@701,200,500,301,201,300,601,600,401,501,400,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
